--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
     "@vercel/postgres": "^0.10.0",
